# opencode-diag

./: .gitignore  Cargo.toml  DESIGN_SYSTEM.md  PROJECT_SPEC_diagnostics.md  README.md
src/: main.rs  theme.rs
src/diagnostics/: gpu.rs  mod.rs  processes.rs  settings.rs
src/diagnostics/api/: mod.rs
