[package]
name = "opencode-diag"
version = "0.3.0"
edition = "2021"
authors = ["NyanDanKun"]
description = "Diagnostics tool for OpenCode connection issues"
license = "MIT"
repository = "https://github.com/NyanDanKun/opencode-diag"

[dependencies]
eframe = "0.29"
egui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System info (CPU, RAM, processes)
sysinfo = "0.32"

# HTTP requests for API checks
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Clipboard for copy report
arboard = "3"

# Date/time for reports
chrono = "0.4"

# Settings directory
dirs = "5"

# Windows-specific
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon"] }
# WMI for GPU monitoring on Windows
wmi = "0.14"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
strip = true        # Strip symbols
